[gd_scene load_steps=8 format=3 uid="uid://t2vwkfhu3tse"]

[ext_resource type="Script" path="res://features/main_menu/main_menu.gd" id="1_6hcrl"]
[ext_resource type="Texture2D" uid="uid://w0xlh7u8lp35" path="res://features/main_menu/main_menu_splash.png" id="1_pcphv"]
[ext_resource type="Texture2D" uid="uid://c5148paygtm07" path="res://features/main_menu/title_ramka.png" id="3_6hv1y"]
[ext_resource type="Texture2D" uid="uid://m35hnhc6spux" path="res://features/main_menu/button.png" id="4_rkupw"]
[ext_resource type="FontFile" uid="uid://ck6d4fggkohhb" path="res://assets/Retro Gaming.ttf" id="5_wbtkp"]

[sub_resource type="LabelSettings" id="LabelSettings_cpusk"]
font = ExtResource("5_wbtkp")
font_size = 54
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_v4prj"]
font = ExtResource("5_wbtkp")
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6hcrl")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 3

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(640, 360)
render_target_update_mode = 4

[node name="MainMenuSplash" type="Sprite2D" parent="SubViewportContainer/SubViewport"]
position = Vector2(320, 180)
texture = ExtResource("1_pcphv")

[node name="TitleTextureRect" type="TextureRect" parent="SubViewportContainer/SubViewport"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_top = 66.0
offset_right = 175.0
offset_bottom = 154.0
grow_horizontal = 2
texture = ExtResource("3_6hv1y")

[node name="PlayButton" type="TextureButton" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 37.59
offset_right = 104.0
offset_bottom = 74.59
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_rkupw")

[node name="QuitButton" type="TextureButton" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 114.0
offset_right = 104.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_rkupw")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -228.0
offset_right = 37.5
offset_bottom = -205.0
grow_horizontal = 2
grow_vertical = 2
text = "VOLTRUNNER"
label_settings = SubResource("LabelSettings_cpusk")

[node name="PlayLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 160.0
offset_right = 20.0
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"
label_settings = SubResource("LabelSettings_v4prj")

[node name="QuitLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 384.0
offset_right = 20.0
offset_bottom = 407.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
label_settings = SubResource("LabelSettings_v4prj")
